# logstop.py

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
logstop/: __init__.py
tests/: test_filter.py
