[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "logstop"
version = "0.2.0"
description = "Keep personal data out of your logs"
readme = "README.md"
authors = [
    {name = "Andrew Kane", email = "andrew@ankane.org"}
]
license = "MIT"
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/ankane/logstop.py"
